# fingerprints

./: .bumpversion.cfg  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
fingerprints/: util.py
fingerprints/data/: stopwords.yml  types.yml
fingerprints/types/: compile_new.py  replacer.py
tools/: common_patterns.py  normalization.py  statement_stats.py  stmt_types.py
