[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fingerprints"
version = "1.3.1"
description = "A library to generate entity fingerprints."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "OpenSanctions", email = "info@opensanctions.org" }]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.10"
dependencies = ["normality >= 3.0.1, < 4.0.0"]

[project.urls]
Documentation = "https://github.com/opensanctions/fingerprints/"
Repository = "https://github.com/opensanctions/fingerprints.git"
Issues = "https://github.com/opensanctions/fingerprints/issues"

[project.optional-dependencies]
dev = [
    "bump2version",
    "pyyaml >= 5.0.0, < 7.0.0",
    "mypy",
    "ruff",
    "build",
    "pytest",
    "pytest-cov",
    "types-PyYAML",
    "coverage>=4.1",
]

[project.entry-points."babel.extractors"]

[tool.hatch.build.targets.sdist]
only-include = ["fingerprints", "LICENSE", "README.md"]

[tool.distutils.bdist_wheel]
universal = true

[tool.coverage.run]
branch = true
